# Computation-Speed-Tester

./: .gitignore  README.md  comptester.py  install  main.py  pyproject.toml  steup.cfg
example/: example.py
src/: requirements.txt
src/comptester/: tester.py
src/comptester.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
