[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "<tqdm>",
    "<matplotlib>"
]
build-backend = "setuptools.build_meta"
[project]
name = "comptester"
version = "0.1.0"
authors = [
  { name="Miles Waugh" },
]
description = "A simple python package to test the computation speed of different expressions."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/piano-miles/comptester"
"Bug Tracker" = "https://github.com/piano-miles/comptester/issues"